# DFDistill

./: .buildinfo  .gitignore  README.md  README.rst  blogpost.html  deepinversion.html  genindex.html  index.html  info.html  installation.html  objects.inv  pyproject.toml  search.html  searchindex.js  spec_features.html  stat_features.html
.doctrees/: blogpost.doctree  deepinversion.doctree  environment.pickle  index.doctree  info.doctree  installation.doctree  spec_features.doctree  stat_features.doctree
.github/workflows/: docs.yml
_sources/: blogpost.rst.txt  deepinversion.rst.txt  index.rst.txt  installation.rst.txt  spec_features.rst.txt
dfdistill/: README.rst  conv_net.py  distillation.py  models.py  trainer.py  utils.py  vanilla_distilation.py
dfdistill/algorithms/: data_free.py  deepinversion.py  distill_spec_features.py  distill_stat_features.py  distillation.py  vanilla_distillation.py
dfdistill/basic/: basic.ipynb
dfdistill/demo/: demo.ipynb  demo_manual.ipynb
dfdistill/demo/checkpoint/student/: cifar10-resnet18.pt  cifar10-resnet18_8x.pt
docs/: blogpost.rst  conf.py  index.rst  installation.rst  spec_features.rst  stat_features.rst
tests/: .coverage  test_data_free.py  test_spec_features.py  test_stat_features.py
