[project]
name = "dfdistill"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ignite>=1.1.0",
    "jupyter>=1.1.1",
    "numpy>=2.2.3",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "sphinx>=8.2.1",
    "sphinx-rtd-theme>=3.0.2",
]
